# timesheet

./: README.md  fill_out_timesheet.py  pyproject.toml  timesheet_utils.py
